# memo

1_0/: cpp.json
1_0/linux/: .vimrc
1_0/ros/communcation/socket_udp/socket/: server.cpp
1_0/ros/communcation/socket_udp_1/src/udp/: CMakeLists.txt  package.xml
1_0/ros/communcation/socketv4/communication/launch/: client.launch  client.navigation.launch  server.mapping.launch
1_0/ros/communcation/socketv4/communication/src/: client_node.cpp  server_node.cpp
1_0/ros/communcation/v0111/communication/launch/: server.navigation.launch
1_0/ros/communcation/v5/communication/launch/: server.navigation.launch
1_0/ros/data/: cloud_with_normals.pcd  my_point_cloud.pcd  table_scene_lms400_outlier.pcd  test.pcd
1_0/ros/imu_gps_driver/src/: gps_parse.cpp  gps_serial.cpp  imu_driver.cpp  imu_show_pose.cpp
1_0/ros/leg_tracter/follow_v.0.0.3/: frames.gv  test.yaml
1_0/ros/leg_tracter/follow_v.0.0.3/devel/: .catkin  .rosinstall  setup.sh
1_0/ros/leg_tracter/follow_v.0.0.3/src/follow/: CMakeLists.txt  package.xml
1_0/ros/leg_tracter/leg_detect_v0.0.1/: CMakeLists.txt
1_0/ros/leg_tracter/leg_detect_v0.0.1/include/leg_detcet/: leg.detect.h
1_0/ros/leg_tracter/leg_detect_v0.0.1/launch/: leg_detect.launch
1_0/ros/leg_tracter/leg_detect_v0.0.1/src/: leg.detect.cpp  leg.detect.node.cpp
1_0/ros/leg_tracter/v2/: CMakeLists.txt  package.xml
1_0/ros/leg_tracter/v2/include/leg_detcet/: leg.detect.h
1_0/ros/leg_tracter/v2/launch/: leg_detect.launch
1_0/ros/leg_tracter/v2/msg/: LegArray.msg
1_0/ros/leg_tracter/v2/src/: leg.detect.cpp  random.tree.node.cpp
1_0/ros/pcl/data/: table_scene_lms400_downsampled.pcd
1_0/ros/pcl/pcl_demo1/: CMakeLists.txt  package.xml
1_0/ros/pcl/pcl_demo1/src/: demo1.cpp  main.cpp  pcl_publisher.h
1_0/ros/pcl_demo1/src/: pcl_publisher.cpp
1_0/ros/robot/src/: master.launch  start_cleaner.sh
1_0/ros/robot/src/amcl/src/: amcl_node.cpp
1_0/ros/robot/src/ls01b_ros/launch/: ls01b.launch
1_0/ros/robot/src/ls01d/launch/: ls01d.launch
1_0/ros/robot/src/ls01d/src/: main.cpp
1_0/ros/robot/src/lsrobot/laser/: neato_laser.launch
1_0/ros/robot/src/lsrobot/launch/: amcl_demo.launch
1_0/ros/robot/src/lsrobot/msg/: LSVirtualWall.msg
1_0/ros/robot/src/lsrobot/param/: move_base_params.yaml
1_0/ros/robot/src/lsrobot/scripts/: SerialControl_Client.py  SerialControl_Server.py
1_0/ros/robot/src/lsrobot/srv/: cmd.srv
1_0/ros/robot/src/lsrobot_ext/: CMakeLists.txt
1_0/ros/robot/src/lsrobot_ext/scripts/: move_base_assistance.py  move_base_class.py
1_0/ros/robot/src/lsrobot_node/: CMakeLists.txt
1_0/ros/robot/src/lsrobot_node/include/lsrobot_node/: ls.h  ls_es.h  ls_state.h
1_0/ros/robot/src/lsrobot_node/src/: ls_es.cpp  ls_node.cpp  ls_server.cpp  ls_state.cpp
1_0/ros/robot/src/map_server/: CMakeLists.txt
1_0/ros/robot/src/map_server/include/map_server/: image_loader.h  map_saver.h
1_0/ros/robot/src/map_server/src/: image_loader.cpp  map_server.cpp
1_0/ros/robot/src/move_base/src/: move_base.cpp  move_base_node.cpp
1_0/ros/robot/src/n301n_lidar_driver/launch/: n301n_driver.launch  n301n_driver_config.launch
1_0/ros/robot/src/n301n_lidar_driver/src/: n301n_lidar.cpp
1_0/ros/robot/src/rosbridge_server/: CMakeLists.txt
1_0/ros/robot/src/shell/: auto_remove.sh  config.sh  extend_swap.sh  resolve_laser.sh  robot_auto_start.sh  shutdown_ros.sh
1_0/ros/robot/src/sl/: package.xml
1_0/ros/robot/src/sl/src/: sl.cpp
1_0/ros/robot/src/slam_gmapping/gmapping/: CMakeLists.txt
1_0/ros/robot/src/slam_gmapping/gmapping/src/: gmapping_server.h  slam_gmapping.cpp  slam_gmapping.h
1_0/ros/server_robot/src/: auto_start_setting.sh  robot_auto_start.sh
1_0/ros/server_robot/src/amcl/: CMakeLists.txt
1_0/ros/server_robot/src/amcl/src/: amcl_server.cpp
1_0/ros/server_robot/src/ls01b_ros/: CMakeLists.txt
1_0/ros/server_robot/src/ls01b_ros/launch/: ls01b_config.launch
1_0/ros/server_robot/src/ls01b_ros/src/: ls01b_driver.cpp  ls01b_driver.h  main.cpp
1_0/ros/server_robot/src/ls01d/: CMakeLists.txt
1_0/ros/server_robot/src/ls01d/launch/: ls01d_config.launch
1_0/ros/server_robot/src/lsrobot/: CMakeLists.txt  package.xml
1_0/ros/server_robot/src/lsrobot/launch/: auto_map.launch  gl_planner.launch  gmapping_demo.launch  lsrobot.launch  lsrobot_serial.launch
1_0/ros/server_robot/src/lsrobot/launch/includes/: move_base.launch.xml
1_0/ros/server_robot/src/lsrobot/msg/: LSParam.msg  LSPoints.msg  LSVirtualWalls.msg
1_0/ros/server_robot/src/lsrobot/param/: costmap_common_params.yaml  dummy.yaml  dwa_local_planner_params.yaml
1_0/ros/server_robot/src/lsrobot_node/src/: ls_safety_controller.cpp  ls_topic.cpp
1_0/ros/server_robot/src/map_server/: package.xml
1_0/ros/server_robot/src/map_server/src/: map_saver.cpp
1_0/ros/server_robot/src/move_base/: CMakeLists.txt
1_0/ros/server_robot/src/openslam_gmapping/gridfastslam/: gridslamprocessor.cpp  motionmodel.cpp
1_0/ros/server_robot/src/rosbridge_server/launch/: rosbridge_websocket.launch
1_0/ros/server_robot/src/shell/: copy_ap.sh  laser_config.yaml  ros_ip.bash
1_0/ros/server_robot/src/sl/: CMakeLists.txt
1_0/ros/server_robot/src/sl/include/: laser.h  odom.h
1_0/ros/server_robot/src/sl/launch/: sl.launch
1_0/ros/server_robot/src/sl/src/: laser.cpp  odom.cpp
1_0/ros/server_robot/src/slam_gmapping/gmapping/: package.xml
1_0/ros/socket_3/src/communication/: CMakeLists.txt
1_0/ros/socket_udp/socket/: client.cpp  client_node.cpp  server_node.cpp
1_0/ros/socket_udp_1/socket_1/: file
1_0/ros/socket_udp_1/socket_1/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
1_0/ros/socket_udp_2/src/udp/: CMakeLists.txt
1_0/ros/socketv4/communication/: CMakeLists.txt
1_0/ros/socketv4/communication/include/: client.datapackage.h  server.dataparse.h  server.udprecv.h
1_0/ros/socketv4/communication/launch/: client.mapping.launch  server.launch  server.navigation.launch
1_0/ros/socketv4/communication/src/: client_node.cpp  server_node.cpp
1_0/tensorflow/lenet5/: mnist_lenet5_main.py
1_0/tensorflow/vgg/: app.py  readme  utils.py
(+158 files in other folders)
