<package>
    <name>sl</name>
    <version>1.14.2</version>
    <description>
The operator is a lightweight, purely reactive obstacle-avoidance
    module for mobile robots moving in a planar environment. The operator node
    works by evaluating a set of predefined motion primitives based on a local
    costmap and a desired direction. The best evaluated motion command will be
    send to the mobile base.
    </description>
    <author>Eitan Marder-Eppstein</author>
    <author>Sachin Chitta</author>
    <author>contradict@gmail.com</author>
    <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
    <maintainer email="mferguson@fetchrobotics.com">Michael Ferguson</maintainer>
    <license>BSD</license>
    <url>http://wiki.ros.org/carrot_planner</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <!--<build_depend>angles</build_depend>-->
    <build_depend>eigen</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>tf</run_depend>
    <!--<run_depend>angles</run_depend>-->
    <run_depend>costmap_2d</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>eigen</run_depend>

    <!--export>
        <nav_core plugin="${prefix}/bgp_plugin.xml" />
    </export-->

</package>


