<package>
  <name>lsrobot</name>
  <version>0.0.1</version>
  <description>lsrobot</description>
  <maintainer email="xiangfu@lslidar.com">OSRF</maintainer>
  <license>BSD</license>
  <url type="website">http://</url>
  <url type="repository">https://</url>
  <url type="bugtracker">https://</url>
  <author>Fu</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <!--<run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>-->

  <export>

  </export>
<build_depend>message_generation</build_depend>
<run_depend>message_runtime</run_depend>
</package>
